--- a/web/src/main/webapp/i18n/en/global.json
+++ b/web/src/main/webapp/i18n/en/global.json
@@ -31,6 +31,11 @@
                 "database": "Database",
                 "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
             },
+            "community": {
+                "main": "Community",
+                "search": "Friends",
+                "groups": "Groups"
+            },
             "language": "Language"
         },
         "form": {
