--- a/web/src/main/webapp/i18n/en/friends.json
+++ b/web/src/main/webapp/i18n/en/friends.json
@@ -3,7 +3,7 @@
         "title": "Friends",
         "search": "Search friends",
         "form": {
-            "button": "Register"
+            "button": "Search"
         },
         "messages": {
             "validate": {
