--- a/web/src/main/webapp/i18n/en/friends.json
+++ b/web/src/main/webapp/i18n/en/friends.json
@@ -5,6 +5,10 @@
         "form": {
             "button": "Search"
         },
+        "table": {
+            "athlete": "Athlete",
+            "action": "Action"
+        },
         "messages": {
             "validate": {
                 "login": {
