--- a/web/src/main/webapp/i18n/en/friends.json
+++ b/web/src/main/webapp/i18n/en/friends.json
@@ -7,7 +7,8 @@
         },
         "table": {
             "athlete": "Athlete",
-            "action": "Action"
+            "action": "Action",
+            "follow-success": "You fallow new person"
         },
         "messages": {
             "validate": {
