--- a/web/src/main/webapp/i18n/en/global.json
+++ b/web/src/main/webapp/i18n/en/global.json
@@ -46,7 +46,11 @@
             "confirmpassword": "New password confirmation",
             "confirmpassword.placeholder": "Confirm the new password",
             "email": "Email",
-            "email.placeholder": "Your email"
+            "email.placeholder": "Your email",
+            "firstName": "First name",
+            "firstName.placeholder": "Your first name",
+            "surname": "Surname",
+            "surname.placeholder": "Your surname"
         },
         "messages": {
             "info": {
@@ -80,6 +84,16 @@
                     "invalid": "Your email is invalid.",
                     "minlength": "Your email is required to be at least 5 characters.",
                     "maxlength": "Your email cannot be longer than 50 characters."
+                },
+                "firstName": {
+                    "required": "Your fist name is required",
+                    "minlenght": "Your name is required to be at least 3 characters.",
+                    "maxlenght": "Your name cannot be longer than 100 characters."
+                },
+                "surname": {
+                    "required": "Your surname is required",
+                    "minlenght": "Your surname is required to be at least 3 characters.",
+                    "maxlenght": "Your surname cannot be longer than 100 characters."
                 }
             }
         },
