--- a/web/src/main/webapp/i18n/en/home.json
+++ b/web/src/main/webapp/i18n/en/home.json
@@ -1,11 +1,12 @@
 {
     "home": {
+        "motto": "Don’t let your dreams RUN away",
+        "subtitle": "Wellness and educational platform for amateurs and professionals",
+        "question": "What is Athletic ?",
         "title": "Athleticspot",
-        "subtitle": "run, run, run...",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
         },
-        "question": "If you have any question on JHipster:",
         "link": {
             "homepage": "JHipster homepage",
             "stackoverflow": "JHipster on Stack Overflow",
