--- a/web/src/main/webapp/i18n/en/timeline.json
+++ b/web/src/main/webapp/i18n/en/timeline.json
@@ -3,6 +3,7 @@
         "title" :  "Activities",
         "manual": {
             "title": "Add activity",
+            "comment": "Put a comment",
             "messages": {
                 "success": "<strong>Registration saved!</strong> Please check your email for confirmation.",
                 "error": {
