--- a/web/src/main/webapp/i18n/en/register.json
+++ b/web/src/main/webapp/i18n/en/register.json
@@ -13,7 +13,7 @@
                     "pattern": "Your username can only contain lower-case letters and digits."
                 }
             },
-            "success": "<strong>Registration saved!</strong> Please check your email for confirmation.",
+            "success": "<strong>Registration saved!</strong>",
             "error": {
                 "fail": "<strong>Registration failed!</strong> Please try again later.",
                 "userexists": "<strong>Login name already registered!</strong> Please choose another one.",
