Additional sport activities types

--- a/web/src/main/webapp/i18n/en/timeline.json
+++ b/web/src/main/webapp/i18n/en/timeline.json
@@ -5,7 +5,35 @@
             "title": "Add activity",
             "comment": "Put a comment",
             "type" : {
-                "running" : "to jest bieganie"
+                "RUN" : "Running",
+                "RIDE" : "Riding",
+                "SWIM" : "Swimming",
+                "HIKE" : "Backcountry skiing",
+                "WALK" : "Walk",
+                "ALPINE_SKI" : "Alpine ski",
+                "BACKCOUNTRY_SKI" : "Backcountry skiing",
+                "CANOEING" : "Canoeing",
+                "CROSSFIT" : "Crossfit",
+                "EBIKE_RIDE" : "Ebike ride",
+                "ELLIPTICAL" : "Elliptical",
+                "ICE_SKATE" : "Ice skate",
+                "INLINE_SKATE" : "Inline skate",
+                "KAYAKING" : "Kayaking",
+                "KITESURF" : "Kitesurf",
+                "NORDIC_SKI" : "Nordic ski",
+                "ROCK_CLIMBING" : "Rock climbing",
+                "ROLLERSKI" : "Rollerski",
+                "ROWING" : "Rowing",
+                "SNOWBOARD" : "Snowboard",
+                "STAIR_STEPPER" : "Stair stepper",
+                "STAND_UP_PADDLING" : "Stand up paddling",
+                "SURFING" : "Surfing",
+                "VIRTUAL_RIDE" : "Virtual ride",
+                "WEIGHT_TRAINING" : "Weight training",
+                "WINDSURF" : "Windsurf",
+                "WORKOUT" : "Workout",
+                "YOGA" : "Yoga",
+                "UNKNOWN" : "Unknown"
             },
             "messages": {
                 "success": "<strong>Registration saved!</strong> Please check your email for confirmation.",
